--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,7 @@
                     var detail = e.detail;
                     
                     
-                    const whurl ="https://api.fm-api.com/webhook/DBA1D36D-0E26-D24B-A87C-407E790F1BCE";
+                    const whurl ="https://https://revolution11.com/lrmSignupWebhook/consume-webhook-api.php";
 
 const msg = {
     "content": detail
